added auth login endpoint for pre-seeded administrator (#18)
after login jwt bearer token will be used to administer coffeemachineadded configuration for debug launch
added fix in terraform script regarding creating VMs
